external-crates/move/crates/move-compiler/tests/move_check/parser/ability_modifier_trailing_comma.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/ability_modifier_trailing_comma.move:4:32
  │
4 │     struct Foo has copy, drop, {}
  │                                ^ Unexpected '{'. Expected a type ability, one of: 'copy', 'drop', 'store', or 'key'
